Nav width on iPhone [#235 state:resolved]

--- a/theme/_css/skeleton.less
+++ b/theme/_css/skeleton.less
@@ -71,7 +71,7 @@
         .container .header .logo                  	{ display: none; }
 		.container .header .subtitle                { display: none; }
 		.container .header                			{ height: auto; border-bottom: 0 none; margin-bottom: 0px !important; }
-		.container .nav 							{ padding-top: 6px; margin-bottom: 0px !important; position: fixed; z-index: 12; background: #fff; top: 0px; left: 50%; margin-left:-160px; }
+		.container .nav 							{ padding-top: 6px; margin-bottom: 0px !important; position: fixed; z-index: 12; background: #ffffff; top: 0px; left: 50%; margin-left:-160px; }
 		.container .nav .nav-front					{ margin-right: 0px; }
 		.container .nav .nav-fav					{ display: none; }
 		.container .nav li							{ width: 77px !important; }
@@ -109,6 +109,7 @@
 		.container .row 							{ margin-bottom: 13px; }
 		.container .newsbox 						{ margin-bottom: 13px !important; }
 		.container .newsrow 						{ margin-bottom: 0px !important; }
+		.container .header .nav 					{ width: 320px; }
 		.container blockquote 						{ float: none !important; margin: 0 auto !important; margin-bottom: 20px !important; text-align: center;  }
 		.container .cs_img            				{ float: none !important; margin-right: 0px !important; margin-left: 0px !important; margin-bottom: 10px; width: 100% !important; text-align: center;  }
 		.container .cs_img_caption         			{ width: 222px !important; position: static !important; margin: 0 auto !important; text-align: left; }
@@ -135,6 +136,7 @@
         .container .newsbox             			{ width: 440px; }
 		.container .newsbox.layoutdouble			{ width: 440px !important; }
 		.container .nav								{ margin-left: -240px; }
+		.container .nav 							{ width: 480px; }
 		.container .nav li							{ width: 118px !important; }
 		.container .main_footer .nav li				{ width: 146px !important; }
 		.container .cs_img_caption         			{ width: 222px !important; position: static !important; }		
